# results

./: .gitignore  Analysis.ipynb  README.md  app.py  create_joggler_network.py  giduz_df.csv  home.py  joggler_community.html  joggler_network.html  joggling_backup_300423.xlsx  old_all_time_list_code.py  pyproject.toml  requirements.txt  results.csv  streamlit.sh  streamlit_app.py  test_results.csv
.ipynb_checkpoints/: Analysis-checkpoint.ipynb
data/: 3b_marathon_record_progression.csv  3b_marathon_record_progression.ipynb  IAAF_F.csv  IAAF_F_Middle_Distance.csv  IAAF_F_seconds.csv  IAAF_M.csv  IAAF_M_Long_Distance.csv  IAAF_M_Middle_Distance.csv  IAAF_M_Road_Running.csv  IAAF_M_Sprints.csv  IAAF_M_seconds.csv  IAAF_W_Long_Distance.csv  IAAF_W_Road_Running.csv  IAAF_W_Sprints.csv  giduz_df.csv  handling_pdf_files.ipynb  iaaf_joggler_rank.csv  iaaf_perf_rank.csv  iaaf_points_formatting.ipynb  joggler_pivot.csv  map_pivot.csv  ranking_F_3b_100m.csv  ranking_F_3b_10km.csv  ranking_F_3b_1500m.csv  ranking_F_3b_200m.csv  ranking_F_3b_400m.csv  ranking_F_3b_4x100m.csv  ranking_F_3b_4x400m.csv  ranking_F_3b_5km.csv  ranking_F_3b_800m.csv  ranking_F_3b_Half_Marathon.csv  ranking_F_3b_Marathon.csv  ranking_F_3b_Mile.csv  ranking_F_4b_100m.csv  ranking_F_4b_200m.csv  ranking_F_4b_400m.csv  ranking_F_5b_100m.csv  ranking_F_5b_200m.csv  ranking_F_5b_400m.csv  ranking_F_5b_Marathon.csv  (+32 more)
pages/: 2-jogglers.py  3-All_Time_Lists_(Male).py  3-all_time_lists.py  4-All_Time_Lists_(Female).py  4-joggler_map.py  5-All_Time_Best_Performances.py  5-Joggler_Map.py  6-Joggler_Map.py  9-FAQs.py  (+10 more)
(+2 files in other folders)
