[project]
name = "joggling_results_archive"
version = "0.1.0"
description = "Repository to create the streamlit application to present global joggling results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.43.2",
]
